--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.client_app">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <!-- or -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
    <application
         android:label="client_app"
         android:name="${applicationName}"
